QWindows11Style: Initialize colorSchemeIndex/highContrastTheme in ctor

When creating a QWindows11Style with QStyleFactory::create() the current
colorSchemeIndex and highContrastTheme usage is not set. Those values
are now queried and set also in the Constructor of QWindows11Style.

Fixes: QTBUG-124524
Change-Id: I42a3aa5bafb0ff4193b8644ac1895a78b8c82120
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit b7874f1fabb6cd89962ebbb8ed09a00e1c1ad1ff)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>